syntax = "proto3";

option java_package = "domain.event.block.protocol";
option java_outer_classname = "blockEventMessage";
option java_multiple_files = true;

package block_event_message;

service BlockEventService {
  rpc ReportBlockCreatedEvent(BlockCreatedEventRequest)
      returns (BlockCreatedEventResponse);
}

message BlockCreatedEventRequest {
  string topic = 1;
  uint32 transaction_count = 2;
  uint32 height = 3;
}

message BlockCreatedEventResponse {
  bool cached = 1;
  string status = 2;
}